<resources>
    <string name="app_name">KaisanBaa</string>
    <string name="verify">Verify</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="verify_phone_number">Verify Phone Number</string>
    <string name="verify_profile">Verify Profile</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="setup_profile">Setup Profile</string>
    <string name="chats">CHATS</string>
    <string name="status">STATUS</string>
    <string name="calls">CALLS</string>
    <string name="search">Search</string>
    <string name="group">Group</string>
    <string name="invite">Invite</string>
    <string name="settings">Settings</string>
    <string name="sample_name">Sample Name</string>
    <string name="time">time</string>
    <string name="sample_message">sample message</string>
    <string name="type_a_message">Type a message</string>
    <string name="tap_to_chat">Tap to chat</string>
    <string name="delete_message">Delete Message?</string>
    <string name="delete_for_everyone">Delete for everyone</string>
    <string name="cancel">Cancel</string>
    <string name="textview">TextView</string>
    <string name="update_your_name">Update your name</string>
</resources>